--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,53 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <!-- Permiso para usar la cámara (ya incluido en tu proyecto) -->
-    <uses-permission android:name="android.permission.CAMERA" />
+  <!-- Permisos -->
+  <uses-permission android:name="android.permission.CAMERA" />
 
-    <application
-        android:name="${applicationName}"
-        android:label="smart_fitting_room"
-        android:icon="@mipmap/ic_launcher"
-        android:usesCleartextTraffic="false"
-        android:networkSecurityConfig="@xml/network_security_config">
+  <application
+      android:name="${applicationName}"
+      android:label="smart_fitting_room"
+      android:icon="@mipmap/ic_launcher"
 
-        <!-- 🔹 Actividad principal de Flutter -->
-        <activity
-            android:name=".MainActivity"
-            android:exported="true"
-            android:launchMode="singleTop"
-            android:taskAffinity=""
-            android:theme="@style/LaunchTheme"
-            android:configChanges="orientation|keyboardHidden|keyboard|screenSize|smallestScreenSize|locale|layoutDirection|fontScale|screenLayout|density|uiMode"
-            android:hardwareAccelerated="true"
-            android:windowSoftInputMode="adjustResize">
+      android:usesCleartextTraffic="false"
+      android:networkSecurityConfig="@xml/network_security_config">
 
-            <!-- Tema visible mientras Flutter carga -->
-            <meta-data
-                android:name="io.flutter.embedding.android.NormalTheme"
-                android:resource="@style/NormalTheme" />
+    <!-- Actividad principal de Flutter -->
+    <activity
+        android:name=".MainActivity"
+        android:exported="true"
+        android:launchMode="singleTop"
+        android:taskAffinity=""
+        android:theme="@style/LaunchTheme"
+        android:configChanges="orientation|keyboardHidden|keyboard|screenSize|smallestScreenSize|locale|layoutDirection|fontScale|screenLayout|density|uiMode"
+        android:hardwareAccelerated="true"
+        android:windowSoftInputMode="adjustResize">
 
-            <!-- Filtro para el punto de entrada de la app -->
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+      <!-- Tema visible mientras Flutter carga -->
+      <meta-data
+          android:name="io.flutter.embedding.android.NormalTheme"
+          android:resource="@style/NormalTheme" />
 
-        </activity>
+      <!-- Entry point -->
+      <intent-filter>
+        <action android:name="android.intent.action.MAIN" />
+        <category android:name="android.intent.category.LAUNCHER" />
+      </intent-filter>
 
-        <!-- Requerido por Flutter -->
-        <meta-data
-            android:name="flutterEmbedding"
-            android:value="2" />
+    </activity>
 
-    </application>
+    <!-- Requerido por Flutter -->
+    <meta-data
+        android:name="flutterEmbedding"
+        android:value="2" />
 
-    <!-- 🔍 Requerido para compatibilidad con procesamiento de texto -->
-    <queries>
-        <intent>
-            <action android:name="android.intent.action.PROCESS_TEXT" />
-            <data android:mimeType="text/plain" />
-        </intent>
-    </queries>
+  </application>
+
+  <!-- Compat de PROCESS_TEXT (usado por Flutter engine) -->
+  <queries>
+    <intent>
+      <action android:name="android.intent.action.PROCESS_TEXT" />
+      <data android:mimeType="text/plain" />
+    </intent>
+  </queries>
 
 </manifest>
